Completed the html part of my page and an image

--- a/exchange.html
+++ b/exchange.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="./exchange.css">
 </head>
 <body>
-    <div>
-        <h1>Bitcoin's exchange rate to Naira</h1>
-        <p>Put input the amount of the Bitcoin you have below:</p>
+    <main>
+        <h1>Exchange Rate</h1>
+        <input type="radio" name="" id="">
+        <span>Dollar to Naira</span>
+        <input type="radio" name="" id="">
+        <span>Naira to Dollar</span>
+        <p>Put input the amount you've in Naira or Dollar bellow:</p>
         <input type="text">
-        <p>Your money in Naira is: </p>
-    </div>
+        <div>
+            <div>
+                <p>Your money in Naira</p>
+                <button>Click me!!</button>
+            </div>
+            <div>
+                <p>Your money is Dollar</p>
+                <button>Click me!!</button>
+            </div>
+        </div>
+    </main>
     <script src="./exchange.js"></script>
 </body>
 </html>
