Completed the css part of my page and added some files

--- a/exchange.html
+++ b/exchange.html
@@ -9,20 +9,24 @@
 <body>
     <main>
         <h1>Exchange Rate</h1>
-        <input type="radio" name="" id="">
-        <span>Dollar to Naira</span>
-        <input type="radio" name="" id="">
-        <span>Naira to Dollar</span>
-        <p>Put input the amount you've in Naira or Dollar bellow:</p>
-        <input type="text">
-        <div>
-            <div>
-                <p>Your money in Naira</p>
-                <button>Click me!!</button>
-            </div>
-            <div>
-                <p>Your money is Dollar</p>
-                <button>Click me!!</button>
+        <div class="div1">
+            <h4>Click on one of the options below to change your currency</h4>
+            <input type="radio" name="" id="dollar">
+            <span style="padding-right: 120px;">Dollar to Naira</span>
+            <input type="radio" name="" id="naira">
+            <span>Naira to Dollar</span>
+            <p>Put input the amount you've in Naira or Dollar bellow:</p>
+            <input type="text" id="input">
+            <div class="div2">
+                <div>
+                    <span>Your money in Naira</span>
+                    <button>Click me!!</button>
+                    <div></div>
+                </div>
+                <div>
+                    <span>Your money in Dollar</span>
+                    <button>Click me!!</button>
+                </div>
             </div>
         </div>
     </main>
