Completed the JavaScript part of my page, made some changes in html&css part of my page

--- a/exchange.html
+++ b/exchange.html
@@ -11,21 +11,22 @@
         <h1>Exchange Rate</h1>
         <div class="div1">
             <h4>Click on one of the options below to change your currency</h4>
-            <input type="radio" name="" id="dollar">
+            <input type="radio" name="exchange" id="dollar">
             <span style="padding-right: 120px;">Dollar to Naira</span>
-            <input type="radio" name="" id="naira">
+            <input type="radio" name="exchange" id="naira">
             <span>Naira to Dollar</span>
             <p>Put input the amount you've in Naira or Dollar bellow:</p>
             <input type="text" id="input">
             <div class="div2">
                 <div>
                     <span>Your money in Naira</span>
-                    <button>Click me!!</button>
-                    <div></div>
+                    <button id="btn1">Click me!!</button>
+                    <div class="div3"></div>
                 </div>
                 <div>
                     <span>Your money in Dollar</span>
-                    <button>Click me!!</button>
+                    <button id="btn2">Click me!!</button>
+                    <div class="div4"></div>
                 </div>
             </div>
         </div>
