Changed name of files and made some changes to the webpage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./exchange.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <main>
@@ -31,6 +31,6 @@
             </div>
         </div>
     </main>
-    <script src="./exchange.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
