Made some changes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="div1">
             <h4>Click on one of the options below to change your currency</h4>
             <input type="radio" name="exchange" id="dollar">
-            <span style="padding-right: 120px;">Dollar to Naira</span>
+            <span style="padding-right: 120px;">Dollar to ZAR</span>
             <input type="radio" name="exchange" id="naira">
-            <span>Naira to Dollar</span>
-            <p>Put input the amount you've in Naira or Dollar bellow:</p>
+            <span>ZAR to Dollar</span>
+            <p>Put input the amount you've in ZAR or Dollar bellow:</p>
             <input type="text" id="input">
             <div class="div2">
                 <div>
-                    <span>Your money in Naira</span>
+                    <span>Your money in ZAR</span>
                     <button id="btn1">Click me!!</button>
                     <div class="div3"></div>
                 </div>
